--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.datim.patientLevelMonitor</groupId>
-	<artifactId>patientLevelMonitor</artifactId>
+	<groupId>org.datim.fireEngine</groupId>
+	<artifactId>fireEngine</artifactId>
 	<version>0.5.0-R4</version>
 
-	<name>patientLevelMonitor</name>
+	<name>FireEngine</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
