Update properties file with measure report, add sample properties file

--- a/patientLevelMonitor.properties
+++ b/patientLevelMonitor.properties
@@ -9,5 +9,7 @@ adxPath=[path to the folder for generated ADX output files, e.g. /Users/xxx/.../
 parcialProcessingAllowed=true [If true, it allows the process to continue if an error occurs and log the error. If false, the program stops when error occurs] 
 archiveFilesInQueue=true [If true, the files in the queue will be moved to the archive folder defined in `archivePath` after being processed. If false, the files in the queue are not moved after processing]
 importIntoHMIS=false [If false, it will only generate ADX file and not import data into HMIS.]
-#inputBundleType possible value: [questionnaireResponse, resource] 
-inputBundleType=questionnaireResponse [string for the type of the bundle file to be processed, either resource bundle or questionnaireResponse bundle. Possible values: resource, questionnaireResponse]
+#inputBundleType possible value: [questionnaireResponse, resource, measureReport] 
+inputBundleType=measureReport [string for the type of the bundle file to be processed, can be resource bundle or questionnaireResponse bundle, or measureRepor. Possible values: resource || questionnaireResponse || measureRepor]
+schematronValidatorLocation=https://test.ohie.datim.org:xxxx/schematron_validator/
+readFromFhirServer=false [indicate if read the measure report from fhir server or file system. If true, read measure report from fhir server. If false, read from file system.]
