Add FHIR server domain, login to config properties, change startsWith to endsWith #1

--- a/patientLevelMonitor.properties
+++ b/patientLevelMonitor.properties
@@ -13,3 +13,7 @@ importIntoHMIS=false [If false, it will only generate ADX file and not import da
 inputBundleType=measureReport [string for the type of the bundle file to be processed, can be resource bundle or questionnaireResponse bundle, or measureRepor. Possible values: resource || questionnaireResponse || measureRepor]
 schematronValidatorLocation=https://test.ohie.datim.org:xxxx/schematron_validator/
 readFromFhirServer=false [indicate if read the measure report from fhir server or file system. If true, read measure report from fhir server. If false, read from file system.]
+#set value below when readFromFhirServer=true, leave blank otherwise
+readFromFhirServerDomain=[domain for the FHIR server, e.g. http://localhost:8080]
+readFromFhirServerUsername=[user name to login to the FHIR server]
+readFromFhirServerPassword=[password to login to the FHIR server]
